--- a/yaml/testcustomer-deploy.yaml
+++ b/yaml/testcustomer-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: customer
-  namespace: shop
+  namespace: testcd
   labels:
     service: customer
 spec:
