--- a/yaml/testcustomer-service.yaml
+++ b/yaml/testcustomer-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: customer
-  namespace: shop
+  namespace: testcd
   labels:
     service: customer
 spec:
